# verbose-palm-tree

./: .gitignore  README.md  config.py  flasky.py  hello.py  pyproject.toml  requirements.txt
app/: __init__.py  email.py  models.py
app/auth/: __init__.py  forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/templates/: base.html  index.html
app/templates/auth/: change_email.html  login.html  register.html  unconfirmed.html  update_password.html
app/templates/auth/email/: change_email.txt  confirm.html  confirm.txt  reset_password.html  reset_password.txt
migrations/versions/: 934c0cbbc10e_.py  b1080816160d_initial_migration.py  ba55c8b9e07c_add_favorite_color_column_to_users_table.py  bb3c4a4fecae_.py
templates/: 404.html  base.html  index.html  user.html
templates/mail/: new_user.html  new_user.txt
tests/: test_user_model.py
