[tool.poetry]
name = "flasky"
version = "0.1.0"
description = "Miguel Grinberg's Flask tutorial."
authors = ["Forest Monsen <forest.monsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
