[tool.poetry]
name = "flasky"
version = "0.1.0"
description = "Miguel Grinberg's Flask tutorial."
authors = ["Forest Monsen <forest.monsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0.2"
flask-sqlalchemy = "^2.3"
flask-wtf = "^0.14.2"
flask-bootstrap = "^3.3"
flask-mail = "^0.9.1"
flask-migrate = "^2.4"
flask-moment = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
